# sakak-assignment-apis

./: .gitignore  Dockerfile  README.md  TODO.md  docker-compose.yaml  manage.py  pyproject.toml  requirements.txt
django_project/: asgi.py  urls.py
django_project/settings/: base.py  docker.py  local.py  test.py
nutrient/: asgi.py  urls.py  wsgi.py
nutrient/settings/: base.py  docker.py  local.py
nutrients/: apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
nutrients/management/commands/: task_migrate_data.py
nutrients/migrations/: 0001_initial.py  0002_alter_foodnutrientfact_calorie_and_more.py  0003_alter_foodnutrientfact_food_cd_and_more.py
