[tool.poetry]
name = "sakak-apis"
version = "0.1.0"
description = ""
authors = ["Erlhon9 <hongsbus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.11"
djangorestframework = "^3.14.0"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pre-commit = "^3.6.2"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
