[tool.poetry]
name = "sakak-apis"
version = "0.1.0"
description = ""
authors = ["Erlhon9 <hongsbus@gmail.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.12"
Django = "^4.2.11"
djangorestframework = "^3.14.0"
pytest = "^8.0.2"
pytest-django = "^4.8.0"
pandas = "^2.2.1"
openpyxl = "^3.1.2"
pre-commit = "^3.6.2"
black = "^24.3.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
model-bakery = "^1.17.0"
pytest-cov = "^4.1.0"
django-filter = "^24.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "django_project.settings.local"
python_files = ["tests.py"]
addopts = "-vv -x --lf -s"